@@ -1,6 +1,8 @@
 0.9.2 - in development
 ----------------------
 
+ * qlog: always show location even in the case it runs as ``bzr qlog``.
+
 0.9.1 - 2008-06-17
 ----------------------
 Maintenance release:
